Fixed white space problem and adjusted responsiveness

--- a/achievements/achievements.css
+++ b/achievements/achievements.css
@@ -150,12 +150,12 @@ footer a:hover {
 }
 /*Footer ends*/
 
-@media screen and (max-width: 900px) {
+@media screen and (max-width: 1000px) {
     main {
         display: flex;
         flex-direction: column;
         width: 100%;
-        height: 100%;
+        height: 100vh;
     }
 
     #achievements-page {
