--- a/employment/employment.css
+++ b/employment/employment.css
@@ -79,6 +79,7 @@ nav a:hover {
 
 main {
     width: 70%;
+    height: 100vh;
     flex-direction: column;
     background-color: #F5F5F5;
     color: #303030;
@@ -150,12 +151,12 @@ footer a:hover {
 }
 /*Footer ends*/
 
-@media screen and (max-width: 900px) {
+@media screen and (max-width: 1000px) {
     main {
         display: flex;
         flex-direction: column;
         width: 100%;
-        height: 100%;
+        height: 100vh;
     }
 
     #employment-page {
