--- a/index.css
+++ b/index.css
@@ -150,7 +150,7 @@ footer a:hover {
 }
 /*Footer ends*/
 
-@media screen and (max-width: 900px) {
+@media screen and (max-width: 1000px) {
     main{
         display: flex;
         flex-direction: column;
