--- a/projects/projects.css
+++ b/projects/projects.css
@@ -79,6 +79,7 @@ nav a:hover {
 
 main {
     width: 70%;
+    height: 100vh;
     flex-direction: column;
     background-color: #F5F5F5;
     color: #303030;
@@ -193,12 +194,12 @@ footer a:hover {
 }
 /*Footer ends*/
 
-@media screen and (max-width: 750px) {
+@media screen and (max-width: 1000px) {
     main{
         display: flex;
         flex-direction: column;
         width:100%;
-        height: 100%;
+        height: 100vh;
     }
 
     #project-page {
